# xchess

./: .gitignore  CMakeLists.txt  README.md
assets/: pieces.tga
dep/: CMakeLists.txt
dep/glad/include/glad/: glad.h
dep/glad/src/: glad.c
src/: common.h  embedded_files.h  gfx_common.h  gfx_ui.c  graphics.c  graphics.h  logger.c  logger.h  logic.h  main.c  utils.c  utils.h
